Fixed truncating of the folders selector dropdown on the Sieve Filters screen

--- a/styles/desktop/base.less
+++ b/styles/desktop/base.less
@@ -38,6 +38,10 @@ body {
 		overflow: hidden;
 		flex-grow: 1;
 
+    .non-adjustable & {
+      overflow: visible;
+    }
+
 		&.AdminPanelLayout {
 			height: 100%;
 		}
